--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="iIIuminate.css">
+</head>
+<body>
+
+<p>Tigers are the best animals.</p>
+
+</body>
+</html>
